force-app/main/default/objects/cgcloud__Sales_Organization_User__c/cgcloud__Sales_Organization_User__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between a sales organization and user.</description>
    <label>Sales Organization User</label>
    <nameField>
        <displayFormat>SOU-{0000}</displayFormat>
        <label>Sales Organization User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Organization User</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>