force-app/main/default/objects/cgcloud__Sales_Organization_User__c/fields/cgcloud__Default_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Organization User</relationshipLabel>
    <relationshipName>Sales_Organization_Users</relationshipName>
    <type>Lookup</type>
</CustomField>