force-app/main/default/objects/cgcloud__Sales_Organization_User__c/fields/cgcloud__Default_Visit_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Visit_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Visit Template</label>
    <referenceTo>cgcloud__Visit_Template__c</referenceTo>
    <relationshipLabel>Sales Organization User</relationshipLabel>
    <relationshipName>Sales_Organization_Users</relationshipName>
    <type>Lookup</type>
</CustomField>