force-app/main/default/objects/cgcloud__Sales_Organization_User__c/fields/cgcloud__Is_Tour_Selection_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Tour_Selection_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a tour selection is required for the user. This field is reserved for future use.</description>
    <inlineHelpText>This field is reserved for future use.</inlineHelpText>
    <label>Tour Selection Required</label>
    <type>Checkbox</type>
</CustomField>