force-app/main/default/objects/cgcloud__Sales_Organization_User__c/fields/cgcloud__Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Organization__c</fullName>
    <description>Reference to the sales organization</description>
    <label>Sales Organization</label>
    <referenceTo>cgcloud__Sales_Organization__c</referenceTo>
    <relationshipLabel>User</relationshipLabel>
    <relationshipName>Sales_Organization_User</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>