force-app/main/default/objects/cgcloud__Sales_Organization_User__c/fields/cgcloud__Unique_User_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_User_Id__c</fullName>
    <label>Unique User Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>