force-app/main/default/objects/cgcloud__Sales_Organization_User__c/fields/cgcloud__Work_Begins__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Work_Begins__c</fullName>
    <description>Time the user begins to work.</description>
    <inlineHelpText>Valid Time format: hh:mm (valid range: 00:00 to 23:59)</inlineHelpText>
    <label>Work Begins</label>
    <length>5</length>
    <type>Text</type>
</CustomField>