force-app/main/default/objects/cgcloud__Sales_Organization_User__c/fields/cgcloud__Works_On_Friday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Works_On_Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user in general works on this day of the week. (E.g. used for capacity planning.)</description>
    <label>Works On Friday</label>
    <type>Checkbox</type>
</CustomField>