force-app/main/default/objects/cgcloud__Sales_Organization_User__c/fields/cgcloud__Works_On_Sunday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Works_On_Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user in general works on this day of the week. (E.g. used for capacity planning.)</description>
    <label>Works On Sunday</label>
    <type>Checkbox</type>
</CustomField>