force-app/main/default/objects/cgcloud__Sales_Organization_User__c/validationRules/cgcloud__Check_If_User_Is_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_User_Is_Changed</fullName>
    <active>true</active>
    <description>The User can&apos;t be edited after Sales Organization User creation.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__User__c)</errorConditionFormula>
    <errorMessage>The User can&apos;t be edited after Sales Organization User creation.</errorMessage>
</ValidationRule>