force-app/main/default/objects/cgcloud__Sales_Organization_User__c/validationRules/cgcloud__Work_Begin_End_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Work_Begin_End_Format_Validation</fullName>
    <active>true</active>
    <description>Please enter the correct format for Work Begins and Work Ends (hh:mm).</description>
    <errorConditionFormula>OR(
AND(
NOT(ISBLANK(cgcloud__Work_Begins__c)),
NOT(REGEX(cgcloud__Work_Begins__c, &quot;([01]?[0-9]|2[0-3]):[0-5][0-9]&quot;))
),
AND(
NOT(ISBLANK(cgcloud__Work_Ends__c)),
NOT(REGEX(cgcloud__Work_Ends__c, &quot;([01]?[0-9]|2[0-3]):[0-5][0-9]&quot;))
)
)</errorConditionFormula>
    <errorMessage>Please enter the correct format for Work Begins and Work Ends (hh:mm).</errorMessage>
</ValidationRule>